--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -416,7 +416,7 @@ time = %I:%M %p
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
 #time-alt = %d/%m/%Y%
-time-alt = %b %d, %G
+time-alt = %d %b %G
 
 ; Available tags:
 ;   <label> (default)
@@ -730,7 +730,8 @@ interval = 2
 ;format-online-prefix = " "
 ;format-online-prefix-foreground = ${color.Cyan}
 ;format-online = <toggle> <label-song>
-format-online = <icon-prev> <toggle> <icon-next> <label-song>
+;format-online = <icon-prev> <toggle> <icon-next> <label-song>
+format-online = %{A1:mpdplaynow:}<icon-prev> <toggle> <icon-next>%{A} <label-song>
 
 ;format-playing = ${self.format-online}
 ;format-paused = ${self.format-online}
@@ -965,7 +966,7 @@ label-connected = "%downspeed% | %upspeed%"
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = "Disconnected"
+label-disconnected = "No Data"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -1192,8 +1193,8 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = Workspace 1;
-icon-1 = Workspace 2;
+icon-0 = TTY;
+icon-1 = WEB;
 icon-2 = SYS;
 icon-3 = MED;
 icon-4 = LAB;
@@ -1216,7 +1217,7 @@ label-monitor = %name%
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-active = %icon%
+label-active = %icon% %name%
 label-active-foreground = ${color.Red}
 label-active-background = ${color.bg}
 ;;label-active-underline = ${color.ac}
